--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h3>Senior Product Designer</h3>
             </div>
             <div id="profile">
-                <Center><img src="../Picture.jpeg"></Center>
+                <Center><img src="Picture.jpeg"></Center>
             </div>
         </div>
         <div class="bodyGen">
