--- a/Basic_2/index.html
+++ b/Basic_2/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./main.css">
     <title>CV</title>
 </head>
 
@@ -17,7 +17,7 @@
                 <h3>Senior Product Designer</h3>
             </div>
             <div id="profile">
-                <Center><img src="../Picture.jpeg"></Center>
+                <img src="Picture.jpeg">
             </div>
         </div>
         <div class="bodyGen">
@@ -102,6 +102,7 @@
         </div>
 
     </main>
+
 </body>
 
 </html>
