--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h3>Senior Product Designer</h3>
             </div>
             <div id="profile">
-                <Center><img src="Picture.jpeg"></Center>
+                <center><img src="Picture.jpeg"></center>
             </div>
         </div>
         <div class="bodyGen">
@@ -71,7 +71,7 @@
                 <p>+33 6 33 33 33 33 </p>
                 <p>Vernouillet</p>
                 </br>
-                <h2>Industry Knowledge</h2>
+                <h2 class="titleOne">Industry Knowledge</h2>
                 <p>Product Design</p>
                 <p>User Interface</p>
                 <p>Interaction Design</p>
@@ -79,28 +79,26 @@
                 <p>Rapid Prototyping</p>
                 <p>Design Research</p>
                 </br>
-                <h2>Tools & Technologies</h2>
+                <h2 class="titleOne">Tools & Technologies</h2>
                 <p>Figma,Sketch,Protopie</p>
                 <p>Framer,Invision,Abstract</p>
                 <p>Zeplin,Google Analytics</p>
                 <p>Amplitude,Fullstory...</p>
                 </br>
-                <h2>Other Skills</h2>
+                <h2 class="titleOne">Other Skills</h2>
                 <p>HTML,CSS,jQuery</p>
                 </br>
-                <h2>Languages</h2>
+                <h2 class="titleOne">Languages</h2>
                 <p>French(native)</p>
                 <p>English(professionnal)</p>
                 </br>
-                <h2>Social</h2>
+                <h2 class="titleOne">Social</h2>
                 <p>yoursite.com</p>
                 <p>linkedin.com/in/yourname</p>
                 <p>dribbble.com/yourname</p>
 
             </div>
         </div>
-        </div>
-
     </main>
 
 </body>
