--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <main>
+        <div class="black"></div>
         <div class="header">
             <div id="text">
                 <h2>YOUR NAME</h2>
